Fix VideoParser
 - Change to use externalized ffprobe class